# dockpulse

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  action.yml  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
docs/: index.md
examples/: ci-workflow.yml  sample-compose.yml
examples/demo/: README.md  docker-compose.yml  run-demo.sh
examples/grafana/dashboards/: dockpulse-alerts.json  dockpulse-overview.json  dockpulse-rightsizing.json
examples/grafana/provisioning/: dashboards.yml  datasources.yml
examples/prometheus/: docker-compose.yml  prometheus.yml  recording_rules.yml
scripts/: ci-analyze.sh
src/dockpulse/: analyzer.py  cli.py  collector.py  compose_rewriter.py  config.py  cost.py  dashboard.py  models.py  prometheus.py  reporter.py  rightsizer.py  startup.py  visualizer.py
tests/: test_analyzer.py  test_cli.py  test_collector.py  test_compose_rewriter.py  test_config.py  test_cost.py  test_dashboard.py  test_prometheus.py  test_reporter.py  test_rightsizer.py  test_session_management.py  test_stack_analysis.py  test_startup.py
